--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Resi Wicaksono",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.15"
   }
 }
